--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,190 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* ------------- Base Header - Footer Styles -------------*/
+
+header, footer {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+/* Header Styles */
+
+header {
+
+}
+
+.header-divider {
+
+}
+
+header .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* -------------- Mobile Styles - Homepage ------------------ */
+
+/* Hero area */
+.hero-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.hero-area .content-wrapper {
+
+}
+
+/* Sign up Form */
+aside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.form-description {
+
+}
+
+.form {
+
+}
+
+/* Features Section */
+.features {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.features .content-wrapper {
+
+}
+
+.features-items {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.fontawesome-icon {
+
+}
+
+.features-item-description {
+
+}
+
+/* Reviews Section */
+.reviews {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.reviews .content-wrapper {
+
+}
+
+article {
+
+}
+
+#reviews-img {
+
+}
+
+#reviews-text {
+
+}
+
+/* -------------- Mobile Styles - About page ------------------ */
+
+.mission {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* -------------- Mobile Styles - Faq page ------------------ */
+
+.faq {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.faq .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* Footer */
+
+footer {
+
+}
+
+footer .content-wrapper {
+
+}
+
+footer .footer-content {
+
+}
+
+.contact {
+
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -263,4 +447,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
