--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,13 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* --------------- Base Styles ------------------*/
+.content-wrapper {
+  width: 90%;
+}
+
+
+
 /* ------------- Base Header - Footer Styles -------------*/
 
 header, footer {
@@ -110,11 +117,11 @@ header, footer {
 /* Header Styles */
 
 header {
-
+    padding: 15px 0;
 }
 
 .header-divider {
-
+    width: 1%;
 }
 
 header .content-wrapper {
@@ -122,6 +129,7 @@ header .content-wrapper {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 0;
 }
 
 header nav {
@@ -129,12 +137,14 @@ header nav {
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
+    width: 60%;
 }
 
 header nav ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 70%;
 }
 
 /* -------------- Mobile Styles - Homepage ------------------ */
@@ -151,6 +161,10 @@ header nav ul {
 
 }
 
+.hero-area h1 {
+  padding: 50px 0;
+}
+
 /* Sign up Form */
 aside {
     display: flex;
@@ -161,11 +175,13 @@ aside {
 
 .form-description {
 
+  padding: 30px 0;
 }
 
 .form {
-
+  padding-bottom: 50px;
 }
+
 
 /* Features Section */
 .features {
@@ -175,8 +191,16 @@ aside {
     flex-flow: row wrap;
 }
 
-.features .content-wrapper {
+.features p {
+  margin: 0;
+}
 
+.features .content-wrapper {
+      width: 90%;
+}
+
+.features h2 {
+  padding: 50px 0 25px 0;
 }
 
 .features-items {
@@ -184,6 +208,11 @@ aside {
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
+}
+
+.features article {
+  width: 55%;
+  padding: 25px 0;
 }
 
 .fontawesome-icon {
@@ -206,8 +235,8 @@ aside {
 
 }
 
-article {
-
+.reviews h2 {
+  padding: 50px 0;
 }
 
 #reviews-img {
@@ -216,6 +245,10 @@ article {
 
 #reviews-text {
 
+}
+
+.reviews h3{
+  width: 50%;
 }
 
 /* -------------- Mobile Styles - About page ------------------ */
@@ -256,8 +289,13 @@ footer {
 
 }
 
-footer .content-wrapper {
+footer p {
+  margin: 0;
+}
 
+footer .content-wrapper {
+    width: 55%;
+    margin: 50px 0;
 }
 
 footer .footer-content {
@@ -265,13 +303,15 @@ footer .footer-content {
 }
 
 .contact {
-
+  padding: 50px 0 25px 0;
+  text-align: center;
 }
 
 .social {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 25px 50px 0;
 }
 
 .social-icons {
