--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,10 @@ aside {
   flex-flow: row wrap;
 }
 
+.contact-content p {
+  margin: 0;
+}
+
 /* -------------- Mobile Styles - Faq page ------------------ */
 
 .faq {
@@ -311,7 +315,7 @@ footer .footer-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 25px 50px 0;
+  padding: 25px 50px;
 }
 
 .social-icons {
@@ -319,6 +323,7 @@ footer .footer-content {
   justify-content: space-around;
   align-items: center;
 }
+
 
 
 
@@ -411,15 +416,153 @@ footer .footer-content {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /*Tablet styels here*/
+
+  /*General styles*/
+  .content-wrapper {
+    max-width: 83%;
+  }
+
+/*Header*/
+  header {
+  justify-content: center;
+}
+  header .content-wrapper {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  .header-divider {
+    display: none;
+  }
+
+/*Hero Area*/
+
+/*Aside*/
+aside .content-wrapper {
+  width: 100%;
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+  width: 40%;
+  margin: 0;
+  padding: 0;
+}
+
+/*Features*/
+
+.features .features-item-description {
+  width: 200px;
+}
+
+.features article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  flex-basis: 50%;
+}
+
+/*Reviews*/
+.reviews article {
+  display: flex;
+  justify-content: space-between;
+}
+
+.reviews article div {
+  width: 300px;
+}
+
+/*Footer*/
+
+footer .content-wrapepr {
+  width: 80%;
+  margin: 100px 0;
+}
+
+.footer-content {
+  width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+
+
+footer .copyright {
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+}
+
+/* ==========================================================================
+   ABOUT PAGE
+   ========================================================================== */
+
+   .mission-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .mission-content p {
+        width: 46%;
+    }
+
+    .contact-section .content-wrapper h2 {
+        width: 100%;
+    }
+
+    .contact-content {
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+}
+
+
+/* ==========================================================================
+   FAQ PAGE
+   ========================================================================== */
+.faq .content-wrapper {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .faq-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-flow: row wrap;
+      flex-basis: 100%;
+    }
+
+    .faq-content div {
+      width: 46%;
+    }
+
+    .faq h2 {
+        width: 83%;
+    }
+
+}
+
+@media only screen and (min-width: 1200px) {
+  /*Desktop styles here */
 }
 
 /* ==========================================================================
