added width to about page content wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,9 @@ aside {
 }
 
 /* -------------- Mobile Styles - About page ------------------ */
-
+.content-wrapper {
+  width: 90%;
+}
 .mission {
   display: flex;
   justify-content: center;
