--- a/css/main.css
+++ b/css/main.css
@@ -494,12 +494,13 @@ aside .content-wrapper .form {
 footer .content-wrapepr {
   width: 80%;
   margin: 100px 0;
+  justify-content: center;
 }
 
 .footer-content {
-  width: 500px;
+  width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
 }
@@ -565,6 +566,73 @@ footer .copyright {
 
 @media only screen and (min-width: 1200px) {
   /*Desktop styles here */
+.content-wrapper{
+  max-width: 80%;
+}
+
+/*Hero Area*/
+.hero-area h1 {
+  width: 70%;
+}
+
+/*Aside*/
+aside .content-wrapper {
+  justify-content: space-around;
+}
+
+aside .content-wrapper .form-description,
+aside .content-wrapper.form {
+  width: 31%;
+}
+
+/*Feature*/
+.features h2 {
+  width: 88%;
+}
+
+
+.features article {
+  flex-basis: 33%;
+}
+
+/*Reviews*/
+.reviews article div {
+  width: 50%;
+}
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+   .mission h2,
+   .contact-section .content-wrapper h2 {
+       width: 88%;
+   }
+
+   .mission .content-wrapper {
+      padding: 100px 0;
+   }
+
+   .contact-section .content-wrapper h2 {
+       margin: 100px 0 30px 0;
+   }
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+      .faq {
+        padding: 100px 0;
+      }
+
+       .faq h2 {
+           width: 80%;
+       }
+
+       .faq-content {
+           flex-basis: 100%;
+           justify-content: space-between;
+       }
+
+
 }
 
 /* ==========================================================================
