--- a/css/main.css
+++ b/css/main.css
@@ -409,6 +409,23 @@ input[type=button]:hover {
   align-items: center;
   flex-flow: row wrap;
   background-color: #527158;
+  padding: 50px 0;
+}
+
+.map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 75%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .contact-section {
@@ -418,6 +435,7 @@ input[type=button]:hover {
   flex-flow: row wrap;
   padding-bottom: 100px;
   background-color: #2a423a;
+  padding: 50px 0;
 }
 
 .contact-content p {
