--- a/css/main.css
+++ b/css/main.css
@@ -415,7 +415,7 @@ input[type=button]:hover {
 .map figure {
     width: 100%;
     height: 0;
-    padding-bottom: 75%;
+    padding-bottom: 80%;
     overflow: hidden;
     position: relative;
 }
@@ -732,6 +732,10 @@ footer .copyright {
         width: 46%;
     }
 
+    .map figure {
+      padding-bottom: 45%;
+    }
+
     .contact-section .content-wrapper h2 {
         width: 100%;
     }
@@ -857,8 +861,16 @@ aside p {
       padding: 100px 0;
    }
 
+   .map figure {
+     padding-bottom: 37.5%;
+   }
+
+   .contact-section {
+     padding: 100px 0;
+   }
+
    .contact-section .content-wrapper h2 {
-       margin: 100px 0 30px 0;
+       padding-bottom: 30px;
    }
 
 /* ==========================================================================
