--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,10 @@ input[type=button]:hover {
   padding: 50px 0;
 }
 
+.mission h2 {
+  font-size: 1.875em;
+}
+
 .map figure {
     width: 100%;
     height: 0;
@@ -442,6 +446,18 @@ input[type=button]:hover {
   padding-bottom: 100px;
   background-color: #2a423a;
   padding: 50px 0;
+}
+
+.contact-section #general-info {
+  margin-bottom: 20px;
+}
+
+.contact-section h2 {
+  font-size: 1.875em;
+}
+
+.contact-section h4 {
+  font-size: 1.125em;
 }
 
 .contact-content p {
@@ -638,6 +654,7 @@ footer .footer-content {
 
   header nav ul {
     justify-content: space-between;
+    width: 100%;
   }
 
   .header-divider {
@@ -669,6 +686,10 @@ aside .content-wrapper .form {
 
 aside p {
   font-size: 0.875em;
+}
+
+input[type=button] {
+  font-size: 1.25em;
 }
 
 /*Features*/
@@ -767,6 +788,11 @@ footer .copyright {
         width: 46%;
     }
 
+    .mission h2, .contact-section h2 {
+      font-size: 3em;
+    }
+
+
     .map figure {
       padding-bottom: 45%;
     }
@@ -780,6 +806,10 @@ footer .copyright {
         justify-content: space-between;
         align-items: flex-start;
         flex-flow: row wrap;
+}
+
+.contact-content div h4 {
+  font-size: 1.875em;
 }
 
 
@@ -819,6 +849,10 @@ footer .copyright {
 /*Header*/
 header figure {
   width: 23%;
+}
+
+header nav ul {
+  width: 70%;
 }
 
 /*Hero Area*/
@@ -922,6 +956,11 @@ aside p {
        .faq-content {
            flex-basis: 100%;
            justify-content: space-between;
+       }
+
+       .contact-content {
+         justify-content: space-between;
+         width: 80%;
        }
 
 
